k3s/n8n/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: automation
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:2.41.5
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: "380Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "200m"
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
            - name: local-files
              mountPath: /files
      volumes:
        - name: n8n-data
          hostPath:
            path: /opt/k3s-data/n8n/data
            type: Directory
        - name: local-files
          hostPath:
            path: /opt/k3s-data/n8n/files
            type: Directory
