k3s/n8n/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-svc
  namespace: automation
spec:
  selector:
    app: n8n
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
