k3s/n8n/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n-ingress
  namespace: automation
spec:
  rules:
    - host: n8n.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-svc
                port:
                  number: 5678
    - host: n8n.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n-svc
                port:
                  number: 5678
